--- a/krotify/src/app.html
+++ b/krotify/src/app.html
@@ -7,6 +7,8 @@
 		<title>Digitalize Your Business</title>
 		<script defer src="bundle.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 		<style>
 			body {
             font-family: 'Outfit', sans-serif;
